2002-06-26  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (assuan_write_line): Make sure we never
	accidently print an extra LF.

2002-05-23  Werner Koch  <wk@gnupg.org>

	* assuan-util.c (assuan_set_io_func): New.
	* assuan-buffer.c (writen, readline): Use the new functions
	instead of pth.
	* assuan-socket-server.c (accept_connection): Don't use the
	pth_accept - using the assuan included accept code would be a bad
	idea within Pth so we don't need a replacement function.

2002-05-22  Werner Koch  <wk@gnupg.org>

	* assuan-socket-server.c (assuan_init_connected_socket_server): New.
	(accept_connection): Factored most code out to..
	(accept_connection_bottom): .. new function.

2002-04-04  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (my_log_prefix): New.  Use it for all i/o debug
	output.

2002-03-06  Werner Koch  <wk@gnupg.org>

	* assuan-client.c (_assuan_read_from_server): Detect END.
	(assuan_transact): Pass it to the data callback.

2002-02-27  Werner Koch  <wk@gnupg.org>

	* assuan-client.c (assuan_transact): Add 2 more arguments to
	support status lines. Passing NULL yields the old behaviour.

	* assuan-handler.c (process_request): Flush data lines send
	without using the data fp.

2002-02-14  Werner Koch  <wk@gnupg.org>

	* assuan-inquire.c (assuan_inquire): Check for a cancel command
	and return ASSUAN_Canceled.  Allow for non-data inquiry.

	* assuan.h: Add a few token specific error codes.

2002-02-13  Werner Koch  <wk@gnupg.org>

	* assuan-defs.h (assuan_context_s): New var CLIENT_PID.
	* assuan-pipe-server.c (_assuan_new_context): set default value.
	* assuan-socket-server.c (accept_connection): get the actual pid.

2002-02-12  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (writen,readline) [USE_GNU_PT]: Use pth_read/write.
	* assuan-socket-server.c (accept_connection) [USE_GNU_PTH]: Ditto.

2002-02-01  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (MOSTLYCLEANFILES): New variable.

2002-01-23  Werner Koch  <wk@gnupg.org>
